tests/baselines/reference/functionCall7.errors.txt
tests/cases/compiler/functionCall7.ts(5,10): error TS2554: Expected 1 arguments, but got 2.
tests/cases/compiler/functionCall7.ts(6,5): error TS2345: Argument of type 'number' is not assignable to parameter of type 'c1'.
tests/cases/compiler/functionCall7.ts(7,1): error TS2554: Expected 1 arguments, but got 0.


==== tests/cases/compiler/functionCall7.ts (3 errors) ====
    module m1 { export class c1 { public a; }}
    function foo(a:m1.c1){ a.a = 1; }; 
    var myC = new m1.c1(); 
    foo(myC); 
    foo(myC, myC); 
             ~~~
!!! error TS2554: Expected 1 arguments, but got 2.
    foo(4);
        ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'c1'.
    foo();
    ~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 tests/cases/compiler/functionCall7.ts:2:14: An argument for 'a' was not provided.
    